add in database connection

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,45 @@
 html
   head
   body
-    h1 Nodechat
-
+    p
+      pre.
+        .
+        .     ***** *     **                    **
+        .  ******  **    **** *                  **
+        . **   *  * **    ****                   **
+        .*    *  *  **    * *                    **
+        .    *  *    **   *        ****          **
+        .   ** **    **   *       * ***  *   *** **      ***
+        .   ** **     **  *      *   ****   *********   * ***
+        .   ** **     **  *     **    **   **   ****   *   ***
+        .   ** **      ** *     **    **   **    **   **    ***
+        .   ** **      ** *     **    **   **    **   ********
+        .   *  **       ***     **    **   **    **   *******
+        .      *        ***     **    **   **    **   **
+        .  ****          **      ******    **    **   ****    *
+        . *  *****                ****      *****      *******
+        .*     **                            ***        *****
+        .*
+        . **
+        .      * ***      *
+        .    *  ****  * **                       *
+        .   *  *  ****  **                      **
+        .  *  **   **   **                      **
+        . *  ***        **                    ********
+        .**   **        **  ***      ****    ********
+        .**   **        ** * ***    * ***  *    **
+        .**   **        ***   ***  *   ****     **
+        .**   **        **     ** **    **      **
+        .**   **        **     ** **    **      **
+        . **  **        **     ** **    **      **
+        .  ** *      *  **     ** **    **      **
+        .   ***     *   **     ** **    **      **
+        .    *******    **     **  ***** **      **
+        .      ***       **    **   ***   **
+        .                      *
+        .                     *
+        .                    *
+        .                   *
     form
       .form-group
         input(type='text' name="name")
